force-app/main/default/objects/Dictionary__c/Dictionary__c.object-meta.xml
<CustomObject>
    <label>Glossary</label>
    <nameField>
        <label>Dictionary [Term Name]</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Glossary Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>