force-app/main/default/objects/Dictionary__c/fields/AdditionalMessage__c.field-meta.xml
<CustomField>
    <fullName>AdditionalMessage__c</fullName>
    <inlineHelpText>This field is going to be used by Eddie in case he wants to add an additional message for the team along with Word of the Day</inlineHelpText>
    <label>Additional Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>