force-app/main/default/objects/Dictionary__c/fields/AssociatedTerm1__c.field-meta.xml
<CustomField>
    <fullName>AssociatedTerm1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>In case a term is made up of 2 terms, term 1 will come here, example for Cryptocurrency, Crpto is the Associated term 1</inlineHelpText>
    <label>Associated Term 1</label>
    <referenceTo>AssociatedTerm__c</referenceTo>
    <relationshipLabel>Glossary Terms</relationshipLabel>
    <relationshipName>Glossary_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>