force-app/main/default/objects/Dictionary__c/fields/AssociatedTerm2__c.field-meta.xml
<CustomField>
    <fullName>AssociatedTerm2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>In case a term is made up of 2 terms, term 2 will come here, example for Cryptocurrency, Currency is the Associated term 2</inlineHelpText>
    <label>Associated Term 2</label>
    <referenceTo>AssociatedTerm__c</referenceTo>
    <relationshipLabel>Glossary Terms (Associated Term 2)</relationshipLabel>
    <relationshipName>Glossary_Terms1</relationshipName>
    <type>Lookup</type>
</CustomField>