force-app/main/default/objects/Dictionary__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>If there are any additional comments related to the term, these will be mention here. Any remark, observation or any addtional comment</inlineHelpText>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>