force-app/main/default/objects/Dictionary__c/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <inlineHelpText>Any additional information that needs to be mentioned regarding the term will appear here</inlineHelpText>
    <label>Description2</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>