force-app/main/default/objects/Dictionary__c/fields/Example__c.field-meta.xml
<CustomField>
    <fullName>Example__c</fullName>
    <inlineHelpText>A sentence explaining as an Example of how the term can be used in daily life.</inlineHelpText>
    <label>Example</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>