force-app/main/default/objects/Dictionary__c/fields/Plural__c.field-meta.xml
<CustomField>
    <fullName>Plural__c</fullName>
    <inlineHelpText>The plural of this term is mentioned here.</inlineHelpText>
    <label>Plural</label>
    <type>TextArea</type>
</CustomField>