force-app/main/default/objects/Dictionary__c/fields/Pronunciation__c.field-meta.xml
<CustomField>
    <fullName>Pronunciation__c</fullName>
    <inlineHelpText>This is how the term is pronounced.</inlineHelpText>
    <label>Pronunciation</label>
    <type>TextArea</type>
</CustomField>