force-app/main/default/objects/Dictionary__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <inlineHelpText>All the terms in the Glossary are given a ranking in numerical order based on which &apos;Word of the Day&apos; email will be published every day.</inlineHelpText>
    <label>Rank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>