force-app/main/default/objects/Dictionary__c/fields/RelatedImages__c.field-meta.xml
<CustomField>
    <fullName>RelatedImages__c</fullName>
    <inlineHelpText>Images related to the term will be attached with the &apos;Word of the Day&apos;</inlineHelpText>
    <label>Related Images</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>