force-app/main/default/objects/Dictionary__c/fields/ScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduleDate__c</fullName>
    <inlineHelpText>This is the date on which this term will be published as &apos;Word of the Day&apos;. Select via the calendar</inlineHelpText>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>