force-app/main/default/objects/Dictionary__c/fields/ScheduleDateStatus__c.field-meta.xml
<CustomField>
    <fullName>ScheduleDateStatus__c</fullName>
    <formula>ScheduleDate__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScheduleDateStatus</label>
    <type>Checkbox</type>
</CustomField>