force-app/main/default/objects/Dictionary__c/fields/ScheduleDay__c.field-meta.xml
<CustomField>
    <fullName>ScheduleDay__c</fullName>
    <formula>TEXT(DAY(ScheduleDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the day on which this term will be published as &apos;Word of the Day&apos;</inlineHelpText>
    <label>ScheduleDay</label>
    <type>Text</type>
</CustomField>