force-app/main/default/objects/Dictionary__c/fields/Source1__c.field-meta.xml
<CustomField>
    <fullName>Source1__c</fullName>
    <inlineHelpText>URL link where this term has been picked from. A information from which something originates or can be obtained</inlineHelpText>
    <label>Source1</label>
    <type>Url</type>
</CustomField>