force-app/main/default/objects/Dictionary__c/fields/Source2__c.field-meta.xml
<CustomField>
    <fullName>Source2__c</fullName>
    <inlineHelpText>URL link where this term has been picked from. An additional information from which something originates or can be obtained</inlineHelpText>
    <label>Source2</label>
    <type>Url</type>
</CustomField>