force-app/main/default/objects/Dictionary__c/fields/Speech__c.field-meta.xml
<CustomField>
    <fullName>Speech__c</fullName>
    <inlineHelpText>Select from the picklist the part of Speech that this term belong to.</inlineHelpText>
    <label>Part Of Speech</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Noun</fullName>
            </value>
            <value>
                <fullName>Verb</fullName>
            </value>
            <value>
                <fullName>Adjective</fullName>
            </value>
            <value>
                <fullName>Adverb</fullName>
            </value>
            <value>
                <fullName>Pronoun</fullName>
            </value>
            <value>
                <fullName>Preposition</fullName>
            </value>
            <value>
                <fullName>Conjunction</fullName>
            </value>
            <value>
                <fullName>Interjection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>