force-app/main/default/objects/Dictionary__c/fields/Synonym__c.field-meta.xml
<CustomField>
    <fullName>Synonym__c</fullName>
    <label>Synonym(s)</label>
    <type>TextArea</type>
</CustomField>