force-app/main/default/objects/Dictionary__c/fields/Synonyms__c.field-meta.xml
<CustomField>
    <fullName>Synonyms__c</fullName>
    <inlineHelpText>Synonyms of the term that have the same meaning as this term. See your Dictionary word in different synonyms that have the same meaning</inlineHelpText>
    <label>Synonym(s)</label>
    <type>TextArea</type>
</CustomField>