force-app/main/default/objects/Dictionary__c/fields/TermNameStatus__c.field-meta.xml
<CustomField>
    <fullName>TermNameStatus__c</fullName>
    <inlineHelpText>Current status of the term name if it is submitted for approval.</inlineHelpText>
    <label>Term Name Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>