force-app/main/default/objects/Dictionary__c/fields/WikiLink__c.field-meta.xml
<CustomField>
    <fullName>WikiLink__c</fullName>
    <inlineHelpText>URL of the website where this term is mentioned. Any wiki link where the person can refer and get more information on the dictionary word</inlineHelpText>
    <label>Wiki Link</label>
    <type>Url</type>
</CustomField>