force-app/main/default/objects/Dictionary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Description__c</columns>
    <columns>Description2__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source1__c</columns>
    <columns>Source2__c</columns>
    <columns>ScheduleDate__c</columns>
    <columns>WikiLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>