force-app/main/default/objects/Dictionary__c/listViews/GlossaryTermApproved.listView-meta.xml
<ListView>
    <fullName>GlossaryTermApproved</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TermNameStatus__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Glossary Term - Approved</label>
</ListView>