force-app/main/default/objects/Dictionary__c/listViews/GlossaryTermApprovers_Dictionary.listView-meta.xml
<ListView>
    <fullName>GlossaryTermApprovers_Dictionary</fullName>
    <filterScope>Queue</filterScope>
    <label>Glossary Term Approvers</label>
    <queue>GlossaryTermApprovers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>