force-app/main/default/objects/Dictionary__c/listViews/GlossaryTermRejected.listView-meta.xml
<ListView>
    <fullName>GlossaryTermRejected</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TermNameStatus__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Glossary Term - Rejected</label>
</ListView>