force-app/main/default/objects/Dictionary__c/listViews/GlossaryTermSubmitted.listView-meta.xml
<ListView>
    <fullName>GlossaryTermSubmitted</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TermNameStatus__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Glossary Term -  Submitted</label>
</ListView>